<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlist_songlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="75dp"
    tools:context=".presentation.fragments.SongListFragment">

        <ListView
            android:id="@+id/song_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>