<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="10dp"
    tools:context=".presentation.fragments.SongListItemFragment">


    <TextView
        android:id="@+id/song_name_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingTop="0dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/author_name_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:text="TextView2"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <ImageButton
        android:id="@+id/popup_button"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="right"
        android:adjustViewBounds="true"
        android:background="?android:selectableItemBackground"
        android:fadingEdge="none"
        android:maxHeight="30dp"
        android:maxWidth="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_popup" />

</FrameLayout>