...
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:src="@drawable/ic_skip_prev_big" />

        <ImageButton
            android:id="@+id/button_play_pause"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
...
